<resources>
  <string name="com_facebook_like_button_not_liked">Like</string>
  <string name="com_facebook_like_button_liked">Liked</string>
  <string name="com_facebook_loginview_log_out_button">Log out</string>
  <string name="com_facebook_loginview_log_in_button">Log in</string>
  <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
  <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
  <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
  <string name="com_facebook_loginview_log_out_action">Log out</string>
  <string name="com_facebook_loginview_cancel_action">Cancel</string>
  <string name="com_facebook_loading">Loading...</string>
  <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
  <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
  <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
  <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
  <string name="com_facebook_share_button_text">Share</string>
  <string name="com_facebook_send_button_text">Send</string>
  <string name="vk_name">VK</string>
  <string name="vk_enter_captcha_text">Enter captcha text here</string>
  <string name="vk_retry">Retry</string>
  <string name="vk_send">SEND</string>
  <string name="vk_share">Share</string>
  <string name="vk_new_message_text">Enter your message..</string>
  <string name="vk_new_post_settings">Post settings</string>
  <string name="app_name" translatable="false">funplus-sdk</string>
  <string name="facebook_app_id" translatable="false">221497214560763</string>
  <string name="com_funplus_sdk_account_quick_play">Quick Play</string>
  <string name="com_funplus_sdk_account_login">Login</string>
  <string name="com_funplus_sdk_account_register">Register</string>
  <string name="com_funplus_sdk_account_play_with">Play with:</string>
  <string name="com_funplus_sdk_account_play_with_facebook">Play with Facebook</string>
  <string name="com_funplus_sdk_account_play_with_vk">Play with VK</string>
  <string name="com_funplus_sdk_account_play_with_wechat">Play with WeChat</string>
  <string name="com_funplus_sdk_account_play_with_google_plus">Play with Google Plus</string>
  <string name="com_funplus_sdk_account_or">or</string>
  <string name="com_funplus_sdk_account_with_email">play with email</string>
  <string name="com_funplus_sdk_account_email">Email</string>
  <string name="com_funplus_sdk_account_password">Password</string>
  <string name="com_funplus_sdk_account_re_enter_password">Re-enter password</string>
  <string name="com_funplus_sdk_account_login_welcome">Welcome, {}</string>
  <string name="com_funplus_sdk_account_registration_successful">Registration successful. Your Funplus ID is {}</string>
  <string name="com_funplus_sdk_account_forgot_your_password">Forgot your password?</string>
  <string name="com_funplus_sdk_account_reset_password">Reset password</string>
  <string name="com_funplus_sdk_account_reset_password_instructions">Instructions to reset your password have been sent to your email inbox.</string>
  <string name="com_funplus_sdk_account_reset_password_failed">Failed to reset your password, reason: {}.</string>
  <string name="com_funplus_sdk_account_click_this_link">Click this link: {link} to reset your password</string>
  <string name="com_funplus_sdk_account_password_reset_complete">Password reset complete</string>
  <string name="com_funplus_sdk_account_your_new_password">Your new password is: {password}. We have also sent you an email with the new password.</string>
  <string name="com_funplus_sdk_account_bind_account">Bind Account</string>
  <string name="com_funplus_sdk_account_bind_with_sns">Bind with SNS:</string>
  <string name="com_funplus_sdk_account_bind_facebook_to_continue">Bind Facebook to Continue</string>
  <string name="com_funplus_sdk_account_bind_email_to_continue">Bind Email to Continue</string>
  <string name="com_funplus_sdk_account_logout_alert">Do you want to log out and switch accounts?</string>
  <string name="com_funplus_sdk_account_no">No</string>
  <string name="com_funplus_sdk_account_switch_account">Switch Account</string>
  <string name="com_funplus_sdk_account_funplus_account">Funplus Account</string>
  <string name="com_funplus_sdk_account_funplus_id">Funplus ID</string>
  <string name="com_funplus_sdk_account_guest">Guest</string>
  <string name="com_funplus_sdk_account_bind_email">Bind Email</string>
  <string name="com_funplus_sdk_account_bind_facebook">Bind Facebook</string>
  <string name="com_funplus_sdk_account_bind_vk">Bind VK</string>
  <string name="com_funplus_sdk_account_bind_wechat">Bind WeChat</string>
  <string name="com_funplus_sdk_account_bind_google_plus">Bind Google Plus</string>
  <string name="com_funplus_sdk_account_binding_your_facebook_or_email">Binding your Facebook or email secures your game data, and lets you play with the same game data on multiple devices</string>
  <string name="com_funplus_sdk_account_support">Support</string>
  <string name="com_funplus_sdk_account_log_out">Log out</string>
  <string name="com_funplus_sdk_account_user_center">User Center</string>
  <string name="com_funplus_sdk_account_your_fpid">Your funplus ID is {}</string>
  <string name="com_funplus_sdk_account_cancel">No</string>
  <string name="ErrorUnspecific_9999">Error unspecified</string>
  <string name="FPErrorNotInstall_0100">SDK install failed</string>
  <string name="FPErrorFailedToConnectToConfigServer_0101">Failed to connect to config server</string>
  <string name="FPErrorInvalidConfigRequestData_0102">Config server request data failed</string>
  <string name="FPErrorFailedToParseConfig_0103">Parse config failed</string>
  <string name="FPErrorInvalidConfigData_0104">Invalid game config</string>
  <string name="FPErrorWrongSignature_1101">Signature incorrect</string>
  <string name="FPErrorFailedCreateID_1102">Failed to create FunPlus ID, please try again later</string>
  <string name="FPErrorWrongGameID_1103">Incorrect game ID</string>
  <string name="FPErrorWrongEmail_1104">Invalid email</string>
  <string name="FPErrorWrongPassword_1105">Incorrect password</string>
  <string name="FPErrorWrongGUID_1106">Invalid GUID</string>
  <string name="FPErrorEmailExisted_1107">Email has already been used</string>
  <string name="FPErrorFailedCreateAccount_1108">Failed to create account</string>
  <string name="FPErrorAccountBound_1109">This account has already been bound</string>
  <string name="FPErrorEmailNotFound_1110">Unable to find email.</string>
  <string name="FPErrorLoginFailed_1111">Login failed</string>
  <string name="FPErrorPasswordLength_1112">Password length error</string>
  <string name="FPErrorFailedResetPassword_1113">Reset password failed</string>
  <string name="FPErrorWrongResetPasswordToken_1114" />
  <string name="FPErrorEmptyResetPasswordToken_1115" />
  <string name="FPErrorPasswordNotChanged_1116">New password is similar to old one</string>
  <string name="FPErrorFailedChangePassword_1117">Change password failed</string>
  <string name="FPErrorFailedAccountNotFound_1118">Account not found</string>
  <string name="FPErrorFailedResetPasswordEmail_1119" />
  <string name="FPErrorFailedWrongGameSetting_1120">Invalid game settings</string>
  <string name="FPErrorFailedResetPasswordTemp_1121" />
  <string name="FPErrorEmptyFPID_1122">Empty FPID</string>
  <string name="FPErrorWrongPlatformId_1123">Incorrect platform ID</string>
  <string name="FPErrorFailedToBindWithSocialID_1124">Bind with Social ID failed</string>
  <string name="FPErrorReachLoginLimit_1125">Login limit exceeded</string>
  <string name="FPErrorEmailTooLong_1126">Email too long</string>
  <string name="FPErrorEmptySession_1127">Session is empty</string>
  <string name="FPErrorSessionNotFound_1128">Session not found</string>
  <string name="FPErrorSessionExpired_1129">Session expired</string>
  <string name="FPErrorSessionAppMismatch_1130">Session and current game ID mismatch</string>
  <string name="FPErrorWrongPlatformToken_1131">Platform token error</string>
  <string name="FPErrorWrongPlatformType_1132">Platform type error</string>
  <string name="FPErrorInvalidPlatformToken_1133">Platform token invalid</string>
  <string name="FPErrorUnknownAccountType_1200">Account type unknown</string>
  <string name="FPErrorNotLoggedIn_1201">User not logged in</string>
  <string name="FPErrorAlreadyLoggedIn_1202">User already logged in</string>
  <string name="FPErrorIoginInProgress_1203">Another login currently in progress</string>
  <string name="FPErrorWrongLoginParams_1204">Login parameters invalid</string>
  <string name="FPErrorFailedLoginAccount_1205">Login failed</string>
  <string name="FPErrorAccountBoundToOther_1206">Bind account failed</string>
  <string name="FPErrorFailedToConnectAccountServer_1207">Conect to account server failed</string>
  <string name="FPErrorFailedToParseAccountResponse_1208">Failed to parse account response data</string>
  <string name="FPErrorWechatClientIssue_2000">WeChat: Client error</string>
  <string name="FPErrorWechatUserCancel_2001">WeChat: User cancelled action</string>
  <string name="FPErrorWechatLoginFailed_2002">WeChat: User login failed</string>
  <string name="FPErrorWechatDiffId_2003">WeChat: Inconsistent WeChat accounts</string>
  <string name="FPErrorWechatNotInWhiteList_2004">WeChat: Not in White List</string>
  <string name="FPErrorWechatAccountBoundToOther_2005">WeChat: FunPlus ID is already bound to another account</string>
  <string name="FPErrorFacebookNotLoggedIn_2100">Facebook: User not logged in</string>
  <string name="FPErrorFacebookLoginFailed_2101">Facebook: User login failed</string>
  <string name="FPErrorFacebookGetUserDataFailed_2102">Facebook: Get user data failed</string>
  <string name="FPErrorFacebookSendRequestError_2103">Facebook: Send game invite failed</string>
  <string name="FPErrorFacebookUserCanceledAction_2104">Facebook: User cancelled action</string>
  <string name="FPErrorFacebookException_2105">Facebook: Undefined exception</string>
  <string name="FPErrorFacebookAccountBoundToOther_2106">Facebook: FunPlus ID is already bound to another account</string>
  <string name="FPErrorFacebookGetFriendsDataFailed_2107">Facebook: Get friends data failed</string>
  <string name="FPErrorFacebookNeedUserFriendsPermission_2108">Facebook: Friends permission required</string>
  <string name="FPErrorVkNotLoggedIn_2200">VK: User not logged in</string>
  <string name="FPErrorVkLoginFailed_2201">VK: User login failed</string>
  <string name="FPErrorVkCaptchaError_2202">VK: Captcha error</string>
  <string name="FPErrorVkAccessDenied_2203">VK: Access denied</string>
  <string name="FPErrorVkAcceptUserTokenFailed_2204">VK: Accept user token failed</string>
  <string name="FPErrorVkReceiveNewTokenFailed_2205">VK: Get user token failed</string>
  <string name="FPErrorVkRenewTokenFailed_2206">VK: Token renew failed</string>
  <string name="FPErrorVkException_2207">VK: Undefined exception</string>
  <string name="FPErrorVkUserCanceledAction_2208">VK: User cancelled action</string>
  <string name="FPErrorVkGetUserDataFailed_2209">VK: Get user data failed</string>
  <string name="FPErrorVkAccountBoundToOther_2210">VK: FunPlus ID is already bound to another account</string>
  <string name="FPErrorVkGetFriendsDataFailed_2211">VK: Get friends data failed</string>
  <string name="FPErrorGooglePlusCurrentPersonIsNull_2300">Google Plus: Get current user failed</string>
  <string name="FPErrorGoolePlusGetAccessTokenFailed_2301">Google Plus: Get user token failed</string>
  <string name="FPErrorGoolePlusConnectionFailed_2302">Google Plus: Connection failed</string>
</resources>