<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/com_funplus_sdk_account_popup_width"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@drawable/com_funplus_sdk_account_popup_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/com_funplus_sdk_account_logout_alert"/>

        <Button
            android:id="@+id/com_funplus_sdk_account_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
            android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
            android:background="@drawable/com_funplus_sdk_account_cancel_button"
            android:textColor="@color/com_funplus_sdk_account_white"
            android:textStyle="bold"
            android:text="@string/com_funplus_sdk_account_cancel"/>

        <Button
            android:id="@+id/com_funplus_sdk_account_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
            android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
            android:background="@drawable/com_funplus_sdk_account_submit_button"
            android:textColor="@color/com_funplus_sdk_account_white"
            android:textStyle="bold"
            android:text="@string/com_funplus_sdk_account_switch_account"/>

    </LinearLayout>

</LinearLayout>
