<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/com_funplus_sdk_account_popup_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/com_funplus_sdk_account_popup_padding"
        android:background="@drawable/com_funplus_sdk_account_popup_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_funplus_sdk_account_popup_header_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/com_funplus_sdk_logo_padding"
            android:background="@color/com_funplus_sdk_account_white"
            android:textSize="20sp"
            android:text="@string/com_funplus_sdk_account_bind_account"/>

        <include layout="@layout/com_funplus_sdk_account_back_button"/>

        <ImageButton
            android:id="@+id/com_funplus_sdk_account_switch_account_button"
            android:layout_width="40dp"
            android:layout_height="66dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/com_funplus_sdk_account_switch_account"
            android:background="@null"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/com_funplus_sdk_account_popup_body_margin_top"
            android:layout_marginRight="@dimen/com_funplus_sdk_account_popup_body_margin_right"
            android:layout_marginBottom="@dimen/com_funplus_sdk_account_popup_body_margin_bottom"
            android:layout_marginLeft="@dimen/com_funplus_sdk_account_popup_body_margin_left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/com_funplus_sdk_account_bind_alert_text"
                android:text="@string/com_funplus_sdk_account_binding_your_facebook_or_email"
                android:textColor="#A2948B"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/com_funplus_sdk_account_fpid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_funplus_sdk_account_your_fpid"/>

            <TextView
                android:id="@+id/com_funplus_sdk_account_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/com_funplus_sdk_account_bind_with_sns"
                android:visibility="gone"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_fb_wide_bind_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_fb_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_fb_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_bind_facebook"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_vk_wide_bind_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_vk_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_vk_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_bind_vk"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_wx_wide_bind_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_wx_wide_button"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_bind_wechat"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_gp_wide_bind_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_gp_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_gp_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_bind_google_plus"/>

            <LinearLayout
                android:id="@+id/com_funplus_sdk_account_social_bind_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_fb_bind_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_fb_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_vk_bind_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_vk_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_wx_bind_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_wx_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_gp_bind_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_gp_button"/>

            </LinearLayout>

            <TextView
                android:id="@+id/com_funplus_sdk_account_bind_email_clickable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textColor="@color/com_funplus_sdk_account_fp_dark_blue"
                android:text="@string/com_funplus_sdk_account_bind_email_to_continue"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>