<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/com_funplus_sdk_account_popup_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/com_funplus_sdk_account_popup_padding"
        android:background="@drawable/com_funplus_sdk_account_popup_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_funplus_sdk_account_popup_header_height">

            <include layout="@layout/com_funplus_sdk_logo"/>
            <include layout="@layout/com_funplus_sdk_account_close_button"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/com_funplus_sdk_account_popup_body_margin_top"
            android:layout_marginRight="@dimen/com_funplus_sdk_account_popup_body_margin_right"
            android:layout_marginBottom="@dimen/com_funplus_sdk_account_popup_body_margin_bottom"
            android:layout_marginLeft="@dimen/com_funplus_sdk_account_popup_body_margin_left"
            android:orientation="vertical">

            <Button
                android:id="@+id/com_funplus_sdk_account_express_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_express_login_button"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_quick_play"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_fb_wide_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_fb_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_fb_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_play_with_facebook"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_vk_wide_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_vk_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_vk_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_play_with_vk"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_wx_wide_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_wx_wide_button"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_play_with_wechat"/>

            <Button
                android:id="@+id/com_funplus_sdk_account_gp_wide_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_funplus_sdk_account_popup_primary_button_height"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/com_funplus_sdk_account_popup_primary_button_padding_left"
                android:paddingRight="@dimen/com_funplus_sdk_account_popup_primary_button_padding_right"
                android:background="@drawable/com_funplus_sdk_account_gp_wide_button"
                android:drawableLeft="@drawable/com_funplus_sdk_account_gp_logo"
                android:textColor="@color/com_funplus_sdk_account_white"
                android:textStyle="bold"
                android:text="@string/com_funplus_sdk_account_play_with_google_plus"/>

            <TextView
                android:id="@+id/com_funplus_sdk_account_social_play_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/com_funplus_sdk_account_play_with"/>

            <LinearLayout
                android:id="@+id/com_funplus_sdk_account_social_login_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_fb_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_vk_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_vk_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_wx_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_wx_button"/>

                <ImageButton
                    android:id="@+id/com_funplus_sdk_account_gp_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:src="@drawable/com_funplus_sdk_account_gp_button"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/com_funplus_sdk_account_popup_body_margin_left"
            android:layout_marginRight="@dimen/com_funplus_sdk_account_popup_body_margin_right"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/com_funplus_sdk_account_register_clickable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:textSize="16sp"
                android:textColor="@color/com_funplus_sdk_account_fp_dark_blue"
                android:text="@string/com_funplus_sdk_account_register"/>
            
            <TextView
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/com_funplus_sdk_account_or"/>

            <TextView
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/com_funplus_sdk_account_email_login_clickable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:textSize="16sp"
                android:textColor="@color/com_funplus_sdk_account_fp_dark_blue"
                android:text="@string/com_funplus_sdk_account_with_email"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
